--- a/pythonanywhere/templates/index.html
+++ b/pythonanywhere/templates/index.html
@@ -181,7 +181,7 @@
 </head>
 <body>
     <header>
-        <h1>Notes App</h1>
+        <h1>Future Notes</h1>
         <a href="/account_page">Account</a>
     </header>
     <main>
