--- a/pythonanywhere/templates/home.html
+++ b/pythonanywhere/templates/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Future Notes: A modern app for organizing your thoughts, plans, and ideas. Access notes anywhere and stay productive.">
     <meta name="keywords" content="Notes App, Future Notes, Productivity App, Organize Thoughts, Notes on Windows">
-    <meta name="author" content="Nathan van Cappellen">
+    <meta name="author" content="Nathan Cappellen">
     <title>Future Notes</title>
     <link rel="apple-touch-icon" sizes="180x180" href="static/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="static/favicon-32x32.png">
@@ -330,16 +330,11 @@
         #blur-bg.active {
             display: block;
         }
-
-        #header-icon {
-            right: 10px;
-        }
     </style>
 </head>
 <body>
 
 <header>
-    <a href="#" id="header-icon"><img src="static/favicon.ico" alt="Future Notes Logo" style="width: 50px; height: 50px; border-radius: 50%;"></a>
     <h1>Future Notes</h1>
     <p>The modern way to keep track of your ideas and plans.</p>
 </header>
